index.css
@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');

::-webkit-scrollbar {
    width: 0;
}

body {
    font-family: 'Lato', sans-serif;
    display: grid;
    grid-template-rows: auto auto auto;
}

header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: hsl(0, 0%, 17%);
}

header, main {
    padding: 4px 96px;
}

header img {
    height: 65px;
}

header img:hover {
    opacity: 60%;
    transition: all .5s ease;
}

header img, .navigation {
    display: inline-flex;
    vertical-align: middle;
}

.navigation > ul {
    display: flex;
    flex-flow: row nowrap;
    margin-left: 36px;
}

.navigation li + li {
    margin-left: 36px;
}

.navigation a {
    text-transform: uppercase;
    text-decoration: none;
    color: hsl(0, 0%, 100%);
    font-size: 16px;
}

.navigation a:hover {
    color: hsl(0, 0%, 60%);
    transition: all .5s ease;
}

.actions a {
    text-transform: uppercase;
    text-decoration: none;
    font-size: 14px;
    font-weight: 700;
    color: hsl(0, 0%, 100%);
    padding: 10px 30px;
    border: 1px solid hsl(0, 0%, 100%);
}

.actions a + a {
    margin-left: 8px;
}

.actions a:hover {
    border: 1px solid hsl(37, 71%, 36%);
    background-color: hsl(37, 71%, 36%);
    transition: all .5s ease;
}

.hero {
    position: relative;
}

.hero img {
    max-width: 100%;
}

.call-to-action {
    text-align: center;
    width: 100%;
}

.hero .call-to-action {
    position: absolute;
    bottom: 25%;
}

h1 {
    text-transform: uppercase;
    font-size: 48px;
    font-weight: 700;
    color: hsl(0, 0%, 100%);
    margin-bottom: 1em;
    text-shadow: 0 0 20px black;
}

.call-to-action a {
    text-transform: uppercase;
    text-decoration: none;
    font-size: 14px;
    font-weight: 700;
    color: hsl(0, 0%, 100%);
    background-color: hsl(37, 71%, 36%);
    padding: 10px 30px;
    border: 2px solid hsl(37, 71%, 36%);
}

.call-to-action a:hover {
    background-color: hsl(43, 86%, 28%);
    border: 2px solid hsl(43, 86%, 28%);
    transition: all .5s ease;
}

main {
    padding-top: 96px;
    padding-bottom: 56px;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 36px 104px;
}

h2 {
    grid-row: 1 / span 1;
    grid-column: 1 / span 1;
    text-transform: uppercase;
    font-size: 42px;
    font-weight: 600;
    color: black;
    margin-bottom: 48px;
    line-height: 1.5em;
}

h3 {
    text-transform: uppercase;
    font-size: 28px;
    font-weight: 800;
    color: black;
    margin-bottom: 28px;
}

main p {
    font-size: 17px;
    padding-bottom: 56px;
}

.benefit {
    margin-bottom: 2em;
}

.benefit a {
    text-transform: uppercase;
    text-decoration: none;
    font-size: 14px;
    font-weight: 700;
    color: hsl(0, 0%, 100%);
    background-color: hsl(37, 71%, 36%);
    padding: 10px 30px;
    border: 2px solid hsl(37, 71%, 36%);
}

.benefit a:hover {
    background-color: hsl(43, 86%, 28%);
    border: 2px solid hsl(43, 86%, 28%);
    transition: all .5s ease;
}

.benefit-1 {
    grid-row: 2 / span 1;
    grid-column: 1 / span 1;
}

.benefit-2 {
    grid-row: 2 / span 1;
    grid-column: 2 / span 1;
}

.benefit-3 {
    grid-row: 3 / span 1;
    grid-column: 1 / span 1;
}

.benefit-4 {
    grid-row: 3 / span 1;
    grid-column: 2 / span 1;
}

@media (max-width: 1025px) {
    header, main {
        padding: 4px 36px;
    }

    h2 {
        grid-row: 1 / span 1;
        grid-column: 1 / span 2;
        margin-top: 36px;
        margin-bottom: 26px;
    }

    main h2 {
        text-align: center;
    }

    .navigation li + li {
        margin-left: 24px;
    }
}

@media (max-width: 860px) {
    .navigation > ul {
        display: flex;
        flex-flow: column;
        margin-left: 36px;
    }

    .navigation li + li {
        margin-left: 0;
    }

    header {
        display: block;
        padding-bottom: 25px;
    }

    .meta {
        text-align: center;
        margin-bottom: 25px;
    }

    .actions {
        text-align: center;
    }

    h1 {
        font-size: 36px;
    }

    h2 {
        font-size: 30px;
    }

    h3 {
        font-size: 26px;
    }
}

@media (max-width: 610px) {
    h1 {
        font-size: 30px;
    }

    h2 {
        font-size: 24px;
        margin-top: 10px;
        margin-bottom: 0px;
    }

    h3 {
        font-size: 20px;
    }

    header {
        display: block;
        padding-bottom: 25px;
    }

    .meta {
        text-align: center;
        margin-bottom: 25px;
    }

    .actions {
        text-align: center;
    }

    .benefit-1 {
        grid-row: 2 / span 1;
        grid-column: 1 / span 2;
    }
    
    .benefit-2 {
        grid-row: 3 / span 1;
        grid-column: 1 / span 2;
    }
    
    .benefit-3 {
        grid-row: 4 / span 1;
        grid-column: 1 / span 2;
    }
    
    .benefit-4 {
        grid-row: 5 / span 1;
        grid-column: 1 / span 2;
    }
}

